--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,21 @@ body,
 html {
   height: 100%;
 }
+
+.info {
+  padding: 10px 10px;
+  background: white;
+  border-radius: 5px;
+}
+
+.legend {
+  line-height: 18px;
+  color: #080000;
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
