--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,8 @@ html {
   padding: 10px 10px;
   background: white;
   border-radius: 5px;
+  border-color:grey;
+  border-style:solid;
 }
 
 .legend {
